brandnewproject/src/objects/teacer__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>salary__c</fullName>
        <label>salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>teacer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>teacers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>